--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_messaging: ^10.0.2
   firebase_core: ^1.3.0
+  amplify_flutter: ^0.2.0
+  amplify_datastore: ^0.2.0
 
 dev_dependencies:
   flutter_test:
